--- a/index.html
+++ b/index.html
@@ -202,15 +202,21 @@
         </div>
 
         <div class="work__img">
-            <img src="assets/img/work4.jpg" alt="work4" />
+            <a href="https://footballacademysport.netlify.app/" target="_blank" >
+              <img src="assets/img/page 1.PNG" alt="page 1" />
+            </a>
         </div>
 
         <div class="work__img">
-            <img src="assets/img/work5.jpg" alt="work5" />
+            <a href="https://examplebarbershop.netlify.app/" target="_blank" >
+             <img src="assets/img/page 2.PNG" alt="page 2" />
+            </a>
         </div>
 
         <div class="work__img">
-            <img src="assets/img/work1.jpg" alt="work1" />
+            <a href="https://hassantech.netlify.app/" target="_blank" >
+             <img src="assets/img/page 3.PNG" alt="page 3" />
+            </a> 
         </div>
     </div>
 </section>
